--- a/index.html
+++ b/index.html
@@ -675,8 +675,8 @@ const PLAN_START = '2026-02-23'; // Plan starts Monday Feb 23
 
 // ── GOOGLE CALENDAR CONFIG ─────────────────────────────────────
 // Replace with your actual values from Google Cloud Console
-const GOOGLE_CLIENT_ID = 'YOUR_CLIENT_ID.apps.googleusercontent.com';
-const GOOGLE_API_KEY   = 'YOUR_API_KEY';
+const GOOGLE_CLIENT_ID = 'tasktracker-488018.apps.googleusercontent.com';
+const GOOGLE_API_KEY   = 'AIzaSyBgQL5dFpwAlYIEUYx9wLgVJ0W4-zgL9Ec';
 const SCOPES           = 'https://www.googleapis.com/auth/calendar.readonly';
 
 const EXERCISE_BY_DAY = {
