Update Google API credentials in index.html
Replaced Google API credentials with hardcoded values.

--- a/index.html
+++ b/index.html
@@ -717,8 +717,8 @@ const PLAN_START = '2026-02-23'; // Plan starts Monday Feb 23
 // ── GOOGLE CALENDAR CONFIG ─────────────────────────────────────
 // Credentials are loaded from config.js (which is NOT committed to GitHub)
 // See setup instructions for how to create config.js
-const GOOGLE_CLIENT_ID = window.TRACKER_CONFIG?.clientId || '';
-const GOOGLE_API_KEY   = window.TRACKER_CONFIG?.apiKey   || '';
+const GOOGLE_CLIENT_ID = 'tasktracker-488018.apps.googleusercontent.com';
+const GOOGLE_API_KEY   = 'AIzaSyBgQL5dFpwAlYIEUYx9wLgVJ0W4-zgL9Ec';
 const SCOPES           = 'https://www.googleapis.com/auth/calendar.readonly';
 
 const EXERCISE_BY_DAY = {
